add usermap api
